# plymouth-theme-singularity

./: .gitignore  README.md  meson.build  meson_options.txt
.github/workflows/: build.yml  release.yml
debian/: changelog  control  copyright  plymouth-theme-singularity-bgrt.gsettings-override  plymouth-theme-singularity-bgrt.install  plymouth-theme-singularity-bgrt.postinst  plymouth-theme-singularity-bgrt.postrm  plymouth-theme-singularity-logo.install  plymouth-theme-singularity-logo.postinst  plymouth-theme-singularity-text.install  plymouth-theme-singularity-text.postinst  plymouth-theme-singularity-text.prerm  rules
po/: POTFILES.in  be.po  cs.po  da.po  de.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  he.po  hr.po  hu.po  id.po  it.po  lt.po  ms.po  nl.po  pa.po  pl.po  plymouth-theme-singularity.pot  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po  zh_HK.po  zh_TW.po
src/: meson.build
src/singularity-bgrt/: meson.build  singularity-bgrt.plymouth.desktop
src/singularity-logo/: meson.build  singularity-logo-scale-2.plymouth.in  singularity-logo.plymouth.in
src/singularity-logo/logo_assets/: singularity-logo-scale-2.script  singularity-logo.grub  singularity-logo.script
src/singularity-text/: meson.build  singularity-text.plymouth
