option('singularity-bgrt', type: 'boolean', value: true, description:'build singularity-bgrt plymouth-theme (default)')
option('singularity-logo', type: 'boolean', value: false, description:'build singularity-logo plymouth-theme')
option('singularity-text', type: 'boolean', value: false, description:'build singularity-text plymouth-theme')
